property field + overflow fixes

--- a/css/forms/dialog.scss
+++ b/css/forms/dialog.scss
@@ -60,6 +60,7 @@ dialog.cms-modal {
 		&.scroller {
 			max-height    : 100%;
 			overflow-y    : auto;
+			overflow-x    : hidden;
 			padding-right : 0.5rem;
 
 			&::-webkit-scrollbar {
